[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "peakstar-oss-common"
version = "0.1.0"
description = "Shared, zero-dependency report and telemetry base for Peakstar's open-source tools (DataReady, TrustLens, MCPGuard)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Peakstar", email = "hello@peakstargroup.com" }]
keywords = ["report", "html-report", "peakstar", "oss-tooling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []  # zero runtime dependencies, standard library only

[project.urls]
Homepage = "https://www.peakstargroup.com"
Repository = "https://github.com/peakstargroup/peakstar-oss-common"

[tool.setuptools]
packages = ["peakstar_oss_common"]
